# auto-push

./: .gitignore  .gitmodules  Git.hs  Hooks.hs  Main.hs  PushMerge.hs  README.md  RpcChannel.hs  Server.hs  TestServer.hs  Utils.hs  auto-push.cabal  cabal.project  default.nix  install-hooks.sh  schema.sql  test.sh
PushMerge/: Types.hs
cli/: Main.hs
ghc/: Main.hs  ghc-auto-push.cabal
gitlab/: CHANGELOG.md  DB.hs  Main.hs  autopush-gitlab.cabal  schema.sql
gitlab/GitLab/: MergeRequests.hs  Tickets.hs  Users.hs
gitlab/gitlab/: CHANGELOG.md  gitlab.cabal
gitlab/gitlab/src/GitLab/: Commit.hs  Common.hs  Issue.hs  MergeRequest.hs  MergeRequests.hs  Milestone.hs  Pipeline.hs  Project.hs  Snippet.hs  User.hs
jenkins/: ChangeLog.md  Jenkins.hs  jenkins.cabal
src/: Git.hs  Hooks.hs  PushMerge.hs  RpcChannel.hs  Server.hs  Utils.hs
src/Autopush/: Actions.hs  BuildDriver.hs  DB.hs  Hooks.hs  MergeBranch.hs  MergeRequest.hs  Run.hs  Server.hs
src/Autopush/BuildDrivers/: CircleCI.hs  Script.hs
src/PushMerge/: Types.hs
test/: Main.hs
test/Autopush/Tests/: Actions.hs  DB.hs  Helpers.hs
