name:                auto-push
version:             0.1.0.0
synopsis:            Auto-push
-- description:         
homepage:            http://github.com/bgamari/auto-push
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Git
                       PushMerge
                       PushMerge.Types
                       Utils
                       Hooks
                       Server
                       RpcChannel
  ghc-options:         -Wall
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.8 && <4.13,
                       transformers >= 0.5,
                       exceptions >= 0.8,
                       stm >= 2.4,
                       async >= 2.1,
                       directory >= 1.2,
                       temporary >= 1.2,
                       process >=1.4 && <1.7,
                       bytestring >=0.10 && <0.11,
                       text >= 1.2,
                       containers >= 0.5,
                       aeson >= 1.0,
                       network-uri >= 2.6,
                       lens >= 4.14,
                       warp >= 3.2,
                       http-client >= 0.4,
                       servant-server >= 0.10,
                       servant-client >= 0.13
  default-language:    Haskell2010

-- The client
executable auto-push
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.13,
                       optparse-applicative >= 0.12,
                       auto-push

-- A server for testing
executable test-server
  main-is:             TestServer.hs
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.13,
                       process,
                       auto-push