name:                auto-push
version:             0.1.0.0
synopsis:            Auto-push
-- description:         
homepage:            http://github.com/bgamari/auto-push
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Git
                       PushMerge
                       PushMerge.Types
                       Utils
                       Hooks
                       Server
                       RpcChannel
                       Autopush.MergeRequest
                       Autopush.MergeBranch
                       Autopush.DB
                       Autopush.Hooks
                       Autopush.Actions
                       Autopush.BuildDriver
                       Autopush.BuildDrivers.Script
                       Autopush.BuildDrivers.CircleCI
                       Autopush.Run
                       Autopush.Server
  ghc-options:         -Wall
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.8 && <4.13,
                       HDBC >=2.4.0.2 && <=2.5,
                       HDBC-sqlite3 >=2.3.3.1 && <=2.4,
                       aeson >= 1.0,
                       async >= 2.1,
                       bytestring >=0.10 && <0.11,
                       circlehs,
                       containers >= 0.5,
                       convertible >=1.1.1.0 && <=1.2,
                       directory >= 1.2,
                       exceptions >= 0.8,
                       file-embed >=0.0.11 && <=0.1,
                       filepath >=1.4.2.1 && <=1.5,
                       http-client >= 0.4,
                       lens >= 4.14,
                       mtl >=2.2.2 && <=2.3,
                       network-uri >= 2.6,
                       process >=1.4 && <1.7,
                       random >=1.1 && <=1.2,
                       servant-client >= 0.13,
                       servant-server >= 0.10,
                       stm >= 2.4,
                       temporary >= 1.2,
                       text >= 1.2,
                       transformers >= 0.5,
                       unix >=2.7.2.2 && <=2.8,
                       utf8-string >=1.0.1.1 && <=1.1,
                       warp >= 3.2,
                       yeshql-core >=4.1.0.2 && <=4.2,
                       yeshql-hdbc >=4.1.0.2 && <=4.2
  default-language:    Haskell2010

-- The client
executable auto-push
  main-is:             Main.hs
  hs-source-dirs:      cli
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.13,
                       auto-push,
                       optparse-applicative >= 0.12,
                       text >= 1.2

-- A server for testing
executable test-server
  main-is:             TestServer.hs
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.13,
                       process,
                       auto-push

-- Tests
test-suite tests
  main-is:             Main.hs
  other-modules:       Autopush.Tests.Helpers
               ,       Autopush.Tests.DB
               ,       Autopush.Tests.Actions
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.13,
                       auto-push,

                       HDBC >=2.4.0.2 && <=2.5,
                       HDBC-sqlite3 >=2.3.3.1 && <=2.4,
                       directory >= 1.2,
                       filepath >=1.4.2.1 && <=1.5,
                       stm >= 2.4,
                       tasty >=1.1.0.4 && <=1.2,
                       tasty-hunit >=0.10.0.1 && <=0.11,
                       temporary >= 1.2,
                       text >= 1.2
