name:                jenkins
version:             0.1.0.0
synopsis:            A small library for interacting with Jenkins.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Jenkins
  other-extensions:    DataKinds, TypeOperators, OverloadedStrings, GeneralizedNewtypeDeriving, RecordWildCards
  build-depends:       base >=4.10 && <4.11,
                       case-insensitive >=1.2 && <1.3,
                       exceptions >=0.8 && <0.11,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       aeson >=1.2 && <1.5,
                       wreq >=0.5 && <0.6,
                       lens >=4.16 && <4.17
  default-language:    Haskell2010
