name:                gitlab
version:             0.1.0.0
synopsis:            A simple servant-based interface to the GitLab API.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     GitLab.Commit,
                       GitLab.Project,
                       GitLab.Common,
                       GitLab.Pipeline,
                       GitLab.User,
                       GitLab.Issue,
                       GitLab.Milestone,
                       GitLab.MergeRequest,
                       GitLab.UploadFile
  -- other-modules:
  other-extensions:    TypeApplications, TypeOperators, GeneralizedNewtypeDeriving, OverloadedStrings, RecordWildCards, DataKinds, ScopedTypeVariables
  build-depends:       base >=4.11 && <4.12,
                       text >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       time >=1.8 && <1.9,
                       mtl >=2.2 && <2.3,
                       bytestring >=0.10 && <0.11,
                       process >=1.6 && <1.7,
                       directory >=1.3 && <1.4,
                       aeson,
                       servant,
                       servant-client
  hs-source-dirs:      src
  default-language:    Haskell2010
